[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/TitleScene.gd" type="Script" id=1]
[ext_resource path="res://Font/Modeseven.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://Music/menu.ogg" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 2 )

[node name="TitleScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.242493
margin_top = 1.22772
margin_right = 0.242432
margin_bottom = 1.22772
script = ExtResource( 1 )

[node name="TitleText" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -191.228
margin_right = 513.0
margin_bottom = 34.7723
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.933333, 0.764706, 0.603922, 1 )
text = "The Revenge of Lyssa"
align = 1
valign = 1

[node name="PlayButton" parent="." instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -82.2425
margin_top = 328.772
margin_right = 84.7575
margin_bottom = 397.772
text = "Play"

[node name="ExitButton" parent="." instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.2425
margin_top = 118.772
margin_right = 84.7575
margin_bottom = 187.772
text = "Exit"

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
